Changed .gitignore file

--- a/docs/Assignments/Assignment_1/.gitignore
+++ b/docs/Assignments/Assignment_1/.gitignore
@@ -2,3 +2,7 @@ Assignment_1.aux
 Assignment_1.pdf
 Assignment_1.synctex.gz
 Assignment_1.log
+CRC-Cards.aux
+CRC-Cards.log
+CRC-Cards.pdf
+CRC-Cards.synctex.gz
