--- a/pom.xml
+++ b/pom.xml
@@ -44,24 +44,16 @@
             <version>1.9.5</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>org.codehaus.jackson</groupId>
-            <artifactId>jackson-core-asl</artifactId>
-            <version>1.9.13</version>
-        </dependency>
-        <dependency>
-            <groupId>org.codehaus.jackson</groupId>
-            <artifactId>jackson-mapper-asl</artifactId>
-            <version>1.9.13</version>
-        </dependency>
-
-        <!-- Mongo DB -->
-        <dependency>
-            <groupId>org.mongodb</groupId>
-            <artifactId>mongo-java-driver</artifactId>
-            <version>3.4.1</version>
-        </dependency>
-
+        <!-- <dependency> -->
+        <!--     <groupId>org.codehaus.jackson</groupId> -->
+        <!--     <artifactId>jackson-core-asl</artifactId> -->
+        <!--     <version>1.9.13</version> -->
+        <!-- </dependency> -->
+        <!-- <dependency> -->
+        <!--     <groupId>org.codehaus.jackson</groupId> -->
+        <!--     <artifactId>jackson-mapper-asl</artifactId> -->
+        <!--     <version>1.9.13</version> -->
+        <!-- </dependency> -->
     </dependencies>
 
     <reporting>
@@ -109,11 +101,6 @@
                         <version>6.11.2</version>
                     </dependency>
                 </dependencies>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>cobertura-maven-plugin</artifactId>
-                <version>2.7</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
